crates/oxc_react_compiler/tests/snapshots/invalid-unused-usememo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/invalid-unused-usememo.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] VoidUseMemo: useMemo() result is unused", labels: [LabeledSpan { label: Some("useMemo() result is unused"), span: Span { start: 67, end: 74 }, primary: false }], help: Some("This useMemo() value is unused. useMemo() is for computing and caching values, not for arbitrary side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

import { c as _c } from "react/compiler-runtime";
// @validateNoVoidUseMemo @loggerTestOnly
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
