crates/oxc_react_compiler/tests/snapshots/inverted-if-else.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/inverted-if-else.js
---
function foo(a, b, c) {
	let x;
	bb0: {
		if (a) {
			x = b;
			break bb0;
		}
		x = c;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
