crates/oxc_react_compiler/tests/snapshots/invoked-async-closure-captures-only-active-branch.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/invoked-async-closure-captures-only-active-branch.js
---
function Component(t0) {
	const { cond } = t0;
	let count = 0;
	let cb = _temp;
	const run = async () => {
		await 0;
		cb();
	};
	if (cond) {
		run();
	} else {
		cb = () => count++;
	}
	return null;
}
function _temp() {
	return null;
}
