crates/oxc_react_compiler/tests/snapshots/issue-23752.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/issue-23752.tsx
---
import { c as _c } from "react/compiler-runtime";
export function Component(recursive) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = function recursive_0(x) {
			const read = () => recursive_0;
			if (x) {
				return read;
			}
			recursive_0 = null;
			return read;
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
