crates/oxc_react_compiler/tests/snapshots/issue852.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/issue852.js
---
function Component(c) {
	const x = { c };
	mutate(x);
}
